# LuxTTS

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  README.zh.md  pyproject.toml  requirements.txt  start_server.sh  test_api.py
api/: audio_utils.py  models.py  routes.py  server.py  voice_store.py
docs/: api.md  api.zh.md
test/: test_api_models.py  test_audio_utils.py  test_integration.py  test_luxtts.py  test_routes.py  test_voice_store.py
