[project]
name = "Zipvoice"
version = "0.0.11"
description = "Linacodec is a highly compressive and rapid audio tokenizer for audio models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "cn2an",
  "huggingface-hub",
  "inflect",
  "jieba",
  "lhotse",
  "librosa",
  "linacodec",
  "numpy",
  "onnxruntime<=1.20.1",
  "piper-phonemize",
  "pydub",
  "pypinyin",
  "safetensors",
  "setuptools<81",
  "tensorboard",
  "torch==2.12.0.dev20260404+cu128",
  "torchaudio==2.11.0.dev20260402+cu128",
  "torchvision==0.27.0.dev20260404+cu128",
  "transformers<=4.57.6",
  "vocos",
  "fastapi",
  "uvicorn",
  "python-multipart",
  "httpx>=0.28.1",
]

[project.optional-dependencies]
train = [
  "einops",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120

[tool.uv]
find-links = ["https://k2-fsa.github.io/icefall/piper_phonemize.html"]

[[tool.uv.index]]
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly/cu128"

[tool.uv.sources]
linacodec = { git = "https://github.com/ysharma3501/LinaCodec.git" }

[tool.uv.build-backend]
module-root = "" # The root module of the project

[dependency-groups]
dev = [
    "hypothesis>=6.151.10",
    "pytest>=9.0.2",
]
